# pm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  biome.json  config.json  package.json  tsconfig.json
.github/workflows/: ci.yml
migrations/: 001_initial.sql  002_orgs.sql  003_drop_settings.sql
raycast/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: search-projects.tsx
scripts/: p-gui.applescript
src/: cli.rs  cli.test.ts  config.rs  db.rs  github_auth.rs  index.ts  main.rs  project.rs  types.ts
src/commands/: config.ts  dev.ts  gui.ts  list.ts  org.ts  remove.ts  select.ts
src/commands/config/: index.ts
src/commands/dev/: index.ts
src/commands/gui/: index.ts
src/commands/list/: index.ts
src/commands/org/: index.ts
src/commands/remove/: index.ts
src/commands/repo/: index.ts
src/commands/select/: index.ts
src/lib/: abort.ts  config.ts  constants.ts  env-schema.ts  env.ts  exec.ts  find-projects.test.ts  find-projects.ts  fuzzy-match.test.ts  fuzzy-match.ts  fuzzy.ts  github.ts  hooks.ts  indexer.ts  log.ts  paths.test.ts  paths.ts  project-select.ts  prompt.ts  repo-memories.ts  scope.test.ts  scope.ts  settings.ts  subprocess.ts  terminal.ts  tui.ts
src/lib/config/: config-file.ts  defaults.ts  env.ts  file-config.ts  index.ts  settings.ts
src/lib/db/: database.ts  db-integration.test.ts  index.ts  orgs.test.ts  orgs.ts  projects.ts  recent.ts  schema.ts  settings.ts  system-tag.ts  systems.ts  uuid.test.ts  uuid.ts
web/: index.html
