[package]
name = "pm"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91.0"

[[bin]]
name = "p"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.2", features = ["v4"] }
walkdir = "2.5.0"
